<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="launcherDialer">Phone</string>
    <string name="people">People</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="contactMultiplePickerActivityTitle">Select contacts</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_sendSms">Send Message</string>
    <string name="menu_sendEmail">Send Email</string>
    <string name="menu_createEvent">Create Event</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="menu_edit_member_action_bar">Edit Group Member</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined.</string>
    <string name="deleteConfirmation_title">Delete contact?</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <string name="moto_group_confirm_assignment">Confirm assignments:</string>
    <string name="moto_group_select_number">Please select a number:</string>
    <string name="moto_group_select_email">Please select an email:</string>
    <string name="noNumbers">No numbers</string>
    <string name="noEmails">No emails</string>
    <string name="moto_do_not_send_message">Do not send message</string>
    <string name="moto_do_not_email">Do not email</string>
    <string name="give_name_to_new_group">Give your new group a name:</string>
    <string name="new_group">Group name</string>
    <string name="group_exist">Group name already exists !</string>
    <string name="group_name_cant_empty">Group name can\'t be empty !</string>
    <string name="group_message_limit">Messages can only be created for groups with less than 300 recipients!</string>
    <string name="item_contact_id">itemContactId</string>
    <string name="view_holder">viewHolder</string>
	  <string name="moto_group_add_members">Add members</string>
    <string name="moto_group_add_members_saving_title">Group</string>
		<string name="moto_group_add_members_saving_message">Saving <xliff:g id="groupname" example="Friends">%s</xliff:g></string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">1 contact with phone number</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroCustom">No visible contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="listTotalAllContactsZeroGroup">No contacts in <xliff:g id="name" example="Friends">%s</xliff:g></string>
    <string name="listAllContactsInAccount">Contacts in <xliff:g id="name" example="abc@gmail.com">%s</xliff:g></string>
    <string name="listSingleContact">Single contact</string>
    <string name="listCustomView">Contacts in custom view</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="foundTooManyContacts">More than <xliff:g id="count">%d</xliff:g> found.</string>
    <string name="listFoundAllContactsZero">None found.</string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Backup/Restore/Import</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_deletemulticontacts">Delete contacts</string>
    <string name="menu_share_contacts">Share contacts</string>
   <string name="menu_launch_dialpad">Launch Dialer</string>
    <string name="menu_copytosimdevice">Copy to Card/Device</string>
    <string name="menu_pim">PIM</string>
    <string name="menu_addToSpeedDial">Add to speed dial</string>
    <string name="menu_deleteFromSpeedDial">Remove from speed dial</string>
    <string name="delete">Delete</string>
    <string name="recent_calls_filter_prompt">Choose call type</string>
    <string name="recent_network_filter_prompt">Choose network type</string>
    <string name="recentCalls_empty">No recent calls.</string>
    <string name="menu_ip_call">IP Call</string>
    <string name="ip_call_settings_title">IP Call Settings</string>
    <string name="ip_cdma_title">IP Prefix for CDMA</string>
    <string name="ip_gsm_title">IP Prefix</string>
    <string name="default_cdma_ip_prefix">17901</string>
    <string name="default_gsm_ip_prefix">17951</string>
    <string name="menu_IntlRoaming_Call">Intl Roaming Call Contact</string>
    <string name="menu_sendIntlRoamCallback">Intl Roam Callback Contact</string>
    <string name="recentCalls_sendNumberViaSms">Send number via SMS</string>
    <string name="firewall_addNumberToWhite">Add to firewall VIP list</string>
    <string name="firewall_addNumberToBlack">Add to firewall black list</string>
    <string name="message">Send text message</string>
    <string name="addtocontact">Add to contact</string>
    <string name="viewcontact">View contact</string>
    <string name="editbeforecall">Edit number before call</string>
    <string name="addtotask">Add to tasks</string>
    <string name="callvoicemail">Call</string>
</resources>