<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_contact"
        android:icon="@drawable/ic_add_contact_holo_dark"
        android:title="@string/menu_new_contact_action_bar"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_group"
        android:icon="@drawable/ic_add_group_holo_dark"
        android:title="@string/menu_new_group_action_bar"
        android:showAsAction="ifRoom" />

<!-- MOTO MOD BEGIN , add dialpad menu -->
    <item
        android:id="@+id/menu_dialpad"
        android:icon="@drawable/ic_dialer_launch"
        android:title="@string/menu_launch_dialpad"
        android:showAsAction="ifRoom" />
<!-- MOTO MOD END -->

    <!-- MOTO MOD IKHSS6-14034, change order to move search item to the last(right) one-->
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_ab_search_holo_dark"
        android:title="@string/menu_search"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_contacts_filter"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:title="@string/menu_contacts_filter" />

    <item
        android:id="@+id/menu_import_export"
        android:icon="@drawable/ic_menu_import_export_holo_light"
        android:title="@string/menu_import_export" />

    <item
        android:id="@+id/menu_accounts"
        android:icon="@drawable/ic_menu_accounts_holo_light"
        android:title="@string/menu_accounts" />

    <!-- MOTO MOD BEGIN IKPIM-492 -->
    <item
        android:id="@+id/menu_share_contacts"
        android:icon="@drawable/ic_menu_share_holo_light"
        android:title="@string/menu_share_contacts" />
<!-- MOTO MOD END -->

    <item
        android:id="@+id/menu_delete_multi_contact"
        android:icon="@*android:drawable/ic_menu_delete"
        android:title="@string/menu_deletemulticontacts" />

    <!-- MOT MOD BEGIN - IKPIM-876, add Backup Assistant as Optionmenu -->
    <item
        android:id="@+id/menu_backup_assistant"
        android:visible="false"/>
    <!-- MOT MOD END -->

    <item
        android:id="@+id/menu_copy_to_simdevice"
        android:icon="@drawable/contacts_copy_to_sim_device"
        android:title="@string/menu_copytosimdevice" />

    <item
        android:id="@+id/menu_pim"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:title="@string/menu_pim" />

    <item
        android:id="@+id/menu_test_simsync"
        android:icon="@drawable/ic_menu_accounts_holo_light"
        android:title="Test sim syncadpter" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:title="@string/menu_settings" />
</menu>
