<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

         <!--1.delete -->
         <item android:id="@+id/delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_ab_trash"
          android:showAsAction="always" />

         <!--2.message -->
          <item android:id="@+id/message"
          android:title="@string/message"
          android:icon="@drawable/ic_text_holo_light"
          android:visible="false"
          android:showAsAction="always" />

         <!--3.add to contact -->
          <item android:id="@+id/add"
          android:title="@string/addtocontact"
          android:icon="@drawable/ic_add_contact_holo_dark"
          android:visible="false"
          android:showAsAction="ifRoom" />

          <!--3.view contact -->
           <item android:id="@+id/view"
          android:title="@string/viewcontact"
          android:icon="@drawable/ic_see_contacts"
          android:visible="false"
          android:showAsAction="ifRoom" />

          <!--4.edit before call -->
           <item android:id="@+id/edit"
          android:title="@string/editbeforecall"
          android:icon="@drawable/ic_dialpad"
          android:visible="false"
          android:showAsAction="ifRoom" />

          <!--5.call -->
          <item android:id="@+id/call"
          android:title="@string/callvoicemail"
          android:icon="@drawable/ic_ab_call"
          android:visible="false"
          android:showAsAction="ifRoom" />

           <!--6.add to speed dial-->
          <item android:id="@+id/add_speeddial"
          android:title="@string/menu_addToSpeedDial"
          android:visible="false"
          android:showAsAction="never" />

          <!--7.remove from speed dial-->
          <item android:id="@+id/delete_speeddial"
          android:title="@string/menu_deleteFromSpeedDial"
          android:visible="false"
          android:showAsAction="never" />

          <!--8.add to task-->
           <item android:id="@+id/task"
          android:title="@string/addtotask"
          android:visible="false"
          android:showAsAction="never" />
           
         <!--begin add by txbv34 for IKCBSMMCPPRC-1231-->  
        <item
	    android:id="@+id/menu_add_to_blacklist"
	    android:icon="@drawable/ic_menu_firewall_blacklist"
	    android:title="@string/firewall_addNumberToBlack"
	    android:showAsAction="withText"
	    android:orderInCategory="1" />
	
		<item
	    android:id="@+id/menu_add_to_whitelist"
	    android:icon="@drawable/ic_menu_firewall_whitelist"
	    android:title="@string/firewall_addNumberToWhite"
	    android:showAsAction="withText"
	    android:orderInCategory="1" />
	
		<item
	    android:id="@+id/menu_ip_call"
	    android:icon="@drawable/ic_menu_firewall_whitelist"
	    android:title="@string/menu_ip_call"
	    android:showAsAction="withText"
	    android:orderInCategory="1" />
		
   		<item
        android:id="@+id/menu_send_via_sms"
        android:icon="@drawable/ic_menu_firewall_whitelist"
        android:title="@string/recentCalls_sendNumberViaSms"
	    android:showAsAction="withText"
	    android:orderInCategory="1" />
         <!--end add by txbv34 for IKCBSMMCPPRC-1231-->    
</menu>
