<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
    >


            <ListView android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:fastScrollEnabled="true"
            />


        <ScrollView android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
        >
            <TextView android:id="@+id/emptyText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/noContacts"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorSecondary"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:lineSpacingMultiplier="0.92"
            />
        </ScrollView>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
    >

        <Button android:id="@+id/btn_done"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_done"
            style="?android:attr/buttonBarButtonStyle"
        />

        <Button android:id="@+id/btn_discard"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/menu_doNotSave"
            style="?android:attr/buttonBarButtonStyle"
        />

    </LinearLayout>

</LinearLayout>
