<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Layout parameters are set programmatically. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/favorites_padding_bottom"
    android:orientation="vertical">
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="end">

    <LinearLayout
        android:padding="5dip"
        android:layout_marginTop="5dip"
	    android:drawSelectorOnTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >

        <Spinner android:id="@+id/recent_network_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawSelectorOnTop="true"
            android:prompt="@string/recent_network_filter_prompt"
        />

	    <Spinner android:id="@+id/recent_calls_filter_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:prompt="@string/recent_calls_filter_prompt"
	        android:visibility="gone"
	    />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/voicemail_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <include layout="@layout/call_log_voicemail_status"
    />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
       <!-- MOTO Dialer Code IKHSS7-1980, move the marging outside of list view -->
        <ListView android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:scrollbarStyle="outsideOverlay"
            android:divider="@null"
        />
        <!-- MOTO Dialer Code End IKHSS7-1980-->
        <TextView android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recentCalls_empty"
            android:gravity="center"
            android:layout_marginTop="@dimen/empty_message_top_margin"
            android:textColor="?android:attr/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceLarge"
        />
    </FrameLayout>
</LinearLayout>
